; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_scale-filter.c_scale_filter_destroy.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_scale-filter.c_scale_filter_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scale_filter_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @scale_filter_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scale_filter_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.scale_filter_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.scale_filter_data*
  store %struct.scale_filter_data* %5, %struct.scale_filter_data** %3, align 8
  %6 = call i32 (...) @obs_enter_graphics()
  %7 = load %struct.scale_filter_data*, %struct.scale_filter_data** %3, align 8
  %8 = getelementptr inbounds %struct.scale_filter_data, %struct.scale_filter_data* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @gs_samplerstate_destroy(i32 %9)
  %11 = call i32 (...) @obs_leave_graphics()
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 @bfree(i8* %12)
  ret void
}

declare dso_local i32 @obs_enter_graphics(...) #1

declare dso_local i32 @gs_samplerstate_destroy(i32) #1

declare dso_local i32 @obs_leave_graphics(...) #1

declare dso_local i32 @bfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
